[tool.poetry]
name = "streamlit-llm-app"
version = "0.1.0"
description = "A Streamlit app using LangChain and OpenAI API"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"  # Streamlit Community Cloud用に3.11を指定
streamlit = "^1.51.0"
python-dotenv = "^1.2.1"
langchain = "^0.1.0"
openai = "^2.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"